yelb-app/deployment-with-pv/05a-yelb-ingress.yml
# Reference: https://github.com/mreferre/yelb

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yelb-ui
  annotations:
#    kubernetes.io/ingress.class: contour # check this, your ingress.class may be different 
    cert-manager.io/issuer: "tls-issuer"
  labels:
    app: yelb-ui
spec:
  rules:
  - host: "yelb.app.vslab.xyz"
    http:
      paths:
        - backend:
            serviceName: "yelb-ui"
            servicePort: 80
  tls:
  - hosts:
    - yelb.app.vslab.xyz
    secretName: yelb-tls
